@@ -9,6 +9,7 @@ December 2013 4.4
    -> Bind DLZ support
    -> Samba/Shadow: display password change date in self service
    -> Custom fields: support custom label and icon, auto-completion
+   -> User self registration: support constant attribute values
   - fixed bugs:
    -> Format of photo in Personal tab (158)
 
